# encrypted-vault

./: CHANGELOG.md  README.md  flake.nix  pyproject.toml
docs/: FORMAT.md
examples/nixos/: flake.nix  home.nix
src/kasa/: __init__.py  __main__.py  cli.py  core.py  gui.py
tests/: test_vault.py
